@@ -7,6 +7,7 @@
 	* lib/openclose.c (open_input_with_dirname): new fn.
 	* tests/bibtex-auxinclude.test: new test.
 	* tests/auxinclude*.*: files for test.
+	* am/web.am (web_tests): include bibtex-auxinclude.test.
 	Suggestion from John Collins. See thread from
 	http://tug.org/pipermail/tex-live/2018-May/041624.html.
 
